# BioProtocolBench

./: .gitignore  CITATION.cff  NOTICE  README.md  SAFETY.md  pyproject.toml
data/: enzyme_database.json  reagent_database.json  safety_database.json
data/discovery_track/: assays.json  targets.json
data/parameters/: cloning.json  expression.json  gibson.json  golden_gate.json  growth.json  miniprep.json  pcr.json  purification.json  references.bib  screening.json  transformation.json
data/safety_case/: fixture_transcripts.json  scenarios.json
docs/: human_baseline.md  release_checklist.md  schemas.md
docs/company_briefs/: company_brief_template.md  xaira.md
environments/: Dockerfile  compose.yaml
results/: ablation_growth_verbose.md  analysis.md  current_frontier.md  current_frontier_5seed.md  current_frontier_5seed_assembly.md  current_frontier_5seed_results.md  current_frontier_results.md  current_openai.md  current_openai_results.md  current_smoke.md  current_smoke_results.md  discovery_track.md  discovery_track_results.md  followup_extension.md  followup_results.md  followup_smoke_results.md  human_baseline_pilot.json  human_baseline_pilot.md  human_baseline_seed_plan.json  human_baseline_seed_plan.md  positioning.md  results.md  safety_case_track.json  safety_case_track.md
results/current_anthropic_logs/: 2026-04-16T18-27-22-00-00_express-01_QnFzh9nazf7RB283ZyKwvH.eval  2026-04-16T18-27-43-00-00_golden-gate-01_6pj57Ck6m6m2DiHfXqfHP9.eval  2026-04-16T18-27-50-00-00_purify-01_ipr8NiyTT4KoXSWKRYAJPj.eval  2026-04-16T18-28-17-00-00_purify-01_KiwzAnncYRMmhBUBn3jTqF.eval  2026-04-16T18-28-30-00-00_golden-gate-01_DJYjvzXusa2PhXQhXmydd2.eval  console.txt  (+9 more)
scripts/: aggregate_eval_results.py  aggregate_human_baseline.py  generate_safety_case_report.py  plot_human_baseline.py  plot_scorecard.py  run_discovery_bundle.sh  run_human_baseline.py  run_human_baseline_pilot.py  run_portfolio_eval.sh
src/: inspect_task.py  judge.py  prompts.py  rubric_utils.py  safety_case_inspect_scorer.py  safety_case_scorer.py  scorers.py  solvers.py  trajectory_scorer.py
tests/: scope_exclusion_keywords.txt  test_citations.py  test_discovery_tools.py  test_environment.py  test_human_baseline.py  test_human_baseline_aggregation.py  test_human_baseline_pilot.py  test_human_baseline_plotting.py  test_inspect_safety_case.py  test_inspect_task.py  test_portfolio_runner.py  test_results_aggregation.py  test_rubric_loading.py  test_safety_case_reporting.py  test_safety_case_schema.py  test_safety_case_scoring.py  test_scope_compliance.py  test_scorer.py  test_tools.py  test_trajectory_scorer.py
(+159 files in other folders)
