[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labcraft"
version = "0.1.0"
description = "Stochastic agentic environment for evaluating frontier models on benign microbiology tasks"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "The BioProtocolBench Authors" },
]
keywords = [
    "agent-evaluation",
    "benchmark",
    "inspect-ai",
    "microbiology",
    "stochastic-simulation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "inspect-ai>=0.3.0",
]

[project.urls]
Homepage = "https://github.com/jang1563/BioProtocolBench"
Repository = "https://github.com/jang1563/BioProtocolBench"
Issues = "https://github.com/jang1563/BioProtocolBench/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
analysis = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.entry-points."inspect_ai"]
labcraft = "src.inspect_task"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
src = ["../task_data/**/*.json", "../task_data/**/*.md", "../data/**/*.json", "../data/**/*.bib"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
